[package]
name = "flat-rs"
description = "Flat codec"
version = "1.0.20-alpha"
edition = "2021"
repository = "https://github.com/aiken-lang/flat-rs"
homepage = "https://github.com/aiken-lang/flat-rs"
license = "Apache-2.0"
authors = ["Lucas Rosa <x@rvcas.dev>", "Kasey White <kwhitemsg@gmail.com>"]
rust-version = "1.66.1"

[dependencies]
anyhow = "1.0.69"
thiserror = "1.0.39"

[dev-dependencies]
proptest = "1.1.0"
